Fix mailing list vertical margins on mobile screens

--- a/src/css/footer.scss
+++ b/src/css/footer.scss
@@ -214,7 +214,7 @@ footer {
 
             .mailing-list {
                 width: 100%;
-                padding: 0 40px;
+                padding: 60px 40px;
                 box-sizing: border-box;
 
                 form {
